14 Feb 96:
  o Changed TclX so that it now requires the standard Tcl and Tk runtimes
    be available.  This simplifies the code and tracking changes to Tcl
    at the expense of slightly slower runtime initialization.  This also
    make TclX fully dynamic loadable, including the TclX tlib package
    library.
  o TclX_Init and TkX_Init have been renamed to Tclx_Init and Tkx_Init to
    conform to the dynamic loading conventions.  These routines are no longer
    independent, the Tcl and Tk init routines must be called first.
  o Added initialization of preliminary set of safe commands.
-------------------------------------------------------------------------------
17 Feb 96:
  o Dropped support for the C++ interfaces in tcl++.h.   This file
    was outdated, not documented and of limited usefulness.  It was often
    a source of portability problems.
  o Cleaned-up the installation.  More parameterization is through macros.
    The master installation model is now specified though the configure script,
    but symbolic links must be built by hand.
  o Modified intersect3 to improve its performance, as suggested by
    Ken Copeland <ken@pdsrc.hilco.com>.
  o Changed lgets to return an error if the last line of a file doesn't have
    a new line.  This is an error as in may indicate an incomplete list.
  o Changed min and max commands to support hex and octal numbers.
  o Deleted the -twoids option from server_connect and server_accept.  These
    options were supplied for implementing procs that were compatibile with the
    old TclX server_* commands.
  o Removed the server_send command and made it a compatibility procedure.
    Now that the Tcl I/O system uses send and recv, this function is
    unnecessary.  Note: the comparibility procedure doesn't support the
    -dontroute and -outofband options (which had never been tested anyway).
    (* potential incompatibility *)
-------------------------------------------------------------------------------