@@ -14,7 +14,7 @@
  * software for any purpose.  It is provided "as is" without express or
  * implied warranty.
  *-----------------------------------------------------------------------------
- * $Id: tkXshell.c,v 5.5 1996/02/12 18:17:19 markd Exp $
+ * $Id: tkXshell.c,v 5.6 1996/02/16 07:51:39 markd Exp $
  *-----------------------------------------------------------------------------
  */
 /* 
@@ -38,6 +38,7 @@ static char sccsid[] = "@(#) tkMain.c 1.136 96/01/17 09:32:28";
 #include <ctype.h>
 #include <stdio.h>
 #include <tclExtdInt.h>
+#include "tclXpatchl.h"
 #include <tk.h>
 
 /*
@@ -117,6 +118,19 @@ TkX_Main(argc, argv, appInitProc)
     int code;
     size_t length;
     Tcl_Channel inChannel, outChannel, errChannel, chan;
+    char *tkxVersion;
+
+    tkxVersion = ckalloc (strlen (TK_VERSION) + 
+                           strlen (TCL_EXTD_VERSION_SUFFIX) + 1);
+    strcpy (tkxVersion, TK_VERSION);
+    strcat (tkxVersion, TCL_EXTD_VERSION_SUFFIX);
+
+    TclX_SetAppInfo (TRUE,
+                     "wishx",
+                     "Extended Wish",
+                     tkxVersion,
+                     TCLX_PATCHLEVEL);
+
 
     Tcl_FindExecutable(argv[0]);
     interp = Tcl_CreateInterp();
@@ -127,13 +141,6 @@ TkX_Main(argc, argv, appInitProc)
     inChannel = Tcl_GetChannel(interp, "stdin", NULL);
     outChannel = Tcl_GetChannel(interp, "stdout", NULL);
     errChannel = Tcl_GetChannel(interp, "stderr", NULL);
-
-    /*
-     * Initialize information returned by infox.
-     */
-    tclAppName     = "Wishx";
-    tclAppLongname = "Extended Tk Shell - Wishx";
-    tclAppVersion  = TK_VERSION;
 
     /*
      * Parse command-line arguments.  A leading "-file" argument is
